--- a/app/src/main/res/values/properties.xml
+++ b/app/src/main/res/values/properties.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <string name="baseUrl">https://duckduckgo.com</string>
+    <string name="tosdrUrl">"https://tosdr.org</string>
 </resources>
