Lazily initialise WebView by using ViewStub

--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -123,15 +123,13 @@
             android:layout_height="match_parent"
             android:focusableInTouchMode="true" />
 
-        <com.duckduckgo.app.browser.NestedWebView
-            android:id="@+id/webView"
+        <ViewStub
+            android:id="@+id/webViewViewStub"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:visibility="gone"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:visibility="visible" />
+            android:layout="@layout/lazy_web_view"
+            android:inflatedId="@+id/webView"
+            />
 
     </android.support.design.widget.CoordinatorLayout>
 </android.support.constraint.ConstraintLayout>
