Add settings activity showing only app version

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
 
     <color name="midGreen">#3fa140</color>
     <color name="orange">#de5833</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
