--- a/app/src/main/res/layout/content_tracker_networks.xml
+++ b/app/src/main/res/layout/content_tracker_networks.xml
@@ -22,10 +22,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:ignore="Overdraw">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/bottomDivider"
         android:layout_alignParentTop="true">
 
         <android.support.constraint.ConstraintLayout
@@ -78,6 +77,7 @@
                     android:textColor="@color/warmGrey"
                     android:textSize="12sp"
                     android:textStyle="bold"
+                    android:textIsSelectable="true"
                     tools:text="8 TRACKERS BLOCKED"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -115,12 +115,13 @@
                 android:id="@+id/networksList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="22dp"
-                android:layout_marginTop="22dp"
-                app:layout_constraintTop_toBottomOf="@id/topDivider" />
+                android:nestedScrollingEnabled="false"
+                android:paddingBottom="26dp"
+                app:layout_constraintTop_toBottomOf="@id/topDivider"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.constraint.ConstraintLayout>
