--- a/app/src/main/res/layout/item_tracker_network_element.xml
+++ b/app/src/main/res/layout/item_tracker_network_element.xml
@@ -19,10 +19,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
+    android:paddingBottom="4dp"
     android:paddingEnd="24dp"
     android:paddingStart="24dp"
-    android:paddingTop="8dp"
+    android:paddingTop="3dp"
     tools:background="@android:color/white">
 
     <TextView
@@ -53,6 +53,7 @@
         android:textColor="@color/warmerGrey"
         android:textSize="14sp"
         android:textStyle="normal"
+        android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
