Add toolbar to home activity

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,13 +14,25 @@
   ~ limitations under the License.
   -->
 
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.home.HomeActivity">
+    app:layout_scrollFlags="scroll|enterAlways"
+    tools:context="com.duckduckgo.app.browser.BrowserActivity"
+    tools:menu="menu_browser_activity">
 
-    <include layout="@layout/content_home"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/TransparentToolbar"
+        app:layout_scrollFlags="scroll|enterAlways">
 
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <include layout="@layout/content_home" />
+
+</android.support.constraint.ConstraintLayout>
+
