--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,4 +68,8 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="TransparentToolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:colorControlNormal">@color/white</item>
+    </style>
+
 </resources>
