--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="orange">#de5833</color>
     <color name="powderBlue">#50BFFF</color>
     <color name="midGreen">#3fa140</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
