--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,11 +13,13 @@
     <color name="charcoal">#2f3135</color>
     <color name="charcoalGrey">#47494c</color>
     <color name="slateGray">#5e6168</color>
+    <color name="brownishGray">#5c5c5c</color>
     <color name="warmGrey">#939393</color>
     <color name="warmerGrey">#777777</color>
     <color name="subtleGrey">#f0f0f0</color>
 
     <color name="orange">#de5833</color>
+    <color name="brickOrange">#d03a10</color>
     <color name="powderBlue">#50BFFF</color>
     <color name="midGreen">#3fa140</color>
 
