Make cache clearing reusable as part of fire dialog

--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -19,18 +19,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:padding="24dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <TextView
         android:id="@+id/clearAllOption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:drawableLeft="@drawable/icon_fire_glyph_24dp"
         android:drawablePadding="24dp"
         android:fontFamily="sans-serif"
         android:gravity="center_vertical"
-        android:paddingBottom="34dp"
+        android:paddingBottom="17dp"
+        android:paddingEnd="24dp"
+        android:paddingStart="24dp"
+        android:paddingTop="24dp"
         android:text="@string/fire_clear_all"
         android:textColor="@color/brickOrange"
         android:textSize="16sp"
@@ -38,13 +41,18 @@
 
     <TextView
         android:id="@+id/cancelOption"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:drawableLeft="@drawable/ic_clear_black_24px"
         android:drawablePadding="24dp"
         android:drawableTint="@color/brownishGray"
         android:fontFamily="sans-serif"
         android:gravity="center_vertical"
+        android:paddingBottom="24dp"
+        android:paddingEnd="24dp"
+        android:paddingStart="24dp"
+        android:paddingTop="17dp"
         android:text="@string/fire_cancel"
         android:textColor="@color/brownishGray"
         android:textSize="16sp"
