--- a/app/src/main/res/menu/menu_home_activity.xml
+++ b/app/src/main/res/menu/menu_home_activity.xml
@@ -19,6 +19,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/fire_menu_item"
+        android:icon="@drawable/icon_fire"
+        android:title="@string/privacyDashboard"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/settings_menu_item"
         android:title="@string/settingsMenuItemTitle"
         app:showAsAction="never" />
