--- a/app/src/main/res/layout/content_privacy_practices.xml
+++ b/app/src/main/res/layout/content_privacy_practices.xml
@@ -108,7 +108,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
-                android:background="@color/subtleGrey"
+                android:background="@color/divider"
                 app:layout_constraintTop_toBottomOf="@id/practicesOverview" />
 
             <android.support.v7.widget.RecyclerView
@@ -130,7 +130,7 @@
         android:layout_above="@id/tosdrLink"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:background="@color/subtleGrey" />
+        android:background="@color/divider" />
 
     <TextView
         android:id="@+id/tosdrLink"
