--- a/app/src/main/res/layout/content_tracker_networks.xml
+++ b/app/src/main/res/layout/content_tracker_networks.xml
@@ -108,7 +108,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
-                android:background="@color/subtleGrey"
+                android:background="@color/divider"
                 app:layout_constraintTop_toBottomOf="@id/networksOverview" />
 
             <android.support.v7.widget.RecyclerView
