--- a/app/src/main/res/drawable/icon_fire_glyph_24dp.xml
+++ b/app/src/main/res/drawable/icon_fire_glyph_24dp.xml
@@ -17,8 +17,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:gravity="center"
-        android:left="4dp"
-        android:height="24dp">
+        android:left="3.5dp"
+        android:right="3.5dp">
         <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
             android:scaleType="fitXY"
             android:src="@drawable/icon_fire_glyph" />
