--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -16,6 +16,7 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -39,7 +40,7 @@
         android:textSize="16sp"
         android:textStyle="normal" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/cancelOption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,6 +58,7 @@
         android:textColor="@color/brownishGray"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/clearAllOption" />
+        app:layout_constraintTop_toBottomOf="@id/clearAllOption"
+        tools:ignore="UnusedAttribute" />
 
 </android.support.constraint.ConstraintLayout>
